Fixed hamburger spacing

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ hr {
 .hamburger-inner {
   display: block;
   top: 50%;
-  margin-top: -2px; }
+  margin-top: 1px; }
   .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
     width: 40px;
     height: 4px;
